
headers = files(
    'gbw_getopt.h',
    'gbw_file_info.h',
    'gbw_signal.h',
    'gbw_walk_dir.h',
    'gbw_file.h',
    'gbw_tables.h',
    'gbw_net_util.h',
    'gbw_jhash.h',
    'gbw_list.h',
    'gbw_data_output.h',
    'gbw_time.h',
    'gbw_atomic.h',
    'gbw_buffer.h',
    'gbw_constants.h',
    'gbw_errno.h',
    'gbw_rwlock.h',
    'gbw_uri.h',
    'gbw_ring.h',
    'gbw_filesystem.h',
    'gbw_config.h',
    'gbw_bitops.h',
    'gbw_msgpack_store.h',
    'gbw_object_pool.h',
    'gbw_mpool_agent.h',
    'gbw_fnmatch.h',
    'gbw_log.h',
    'gbw_string.h',
    'gbw_mpool.h',
    'gbw_spinlock.h',
    'gbw_util.h'
)
sources = files(
    'gbw_filestat.c',
    'gbw_cpystrn.c',
    'gbw_printf.c',
    'gbw_mpool_agent.c',
    'gbw_walk_dir.c',
    'gbw_time.c',
    'gbw_file_readwrite.c',
    'gbw_dir.c',
    'gbw_tables.c',
    'gbw_strtime.c',
    'gbw_strnatcmp.c',
    'gbw_file_fullrw.c',
    'gbw_util.c',
    'gbw_file_open.c',
    'gbw_filepath.c',
    'gbw_uri.c',
    'gbw_signal.c',
    'gbw_msgpack_store.c',
    'gbw_log.c',
    'gbw_errno.c',
    'gbw_fileacc.c',
    'gbw_mpool.c',
    'gbw_fnmatch.c',
    'gbw_object_pool.c',
    'gbw_config.c',
    'gbw_net_util.c',
    'gbw_getopt.c',
    'gbw_string.c',
    'gbw_strtok.c'
)